--- a/css/cart.css
+++ b/css/cart.css
@@ -1,8 +1,11 @@
 #cart-container {
     width: 50vw;
+    min-width: 400px;
     border: 1px solid black;
     text-align: center;
     background: rgba(255,255,255,0.5);
+    margin-bottom: 5%;
+    padding-bottom: 5%;
 }
 #cart-container h1 {
     font-weight: bold;
@@ -12,10 +15,62 @@
     text-align: left;
     margin: 4vh;
 }
+#cart-list{
+    width:100%;
+    min-width: 400px;
+}
 .little-cart-item{
     width: 100px;
+    min-width: 100px;
+}
+table tr{
+    min-width: 400px;
+    font-size: 1.1rem;
+}
+table tr td, table tr th {
+    min-width: 57px;
 }
 .input-quantity{
     width: 50px;
     height: 50px;
+}
+#deliver-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 2fr 3fr;
+    grid-template-rows: 3fr;
+    gap: 20px;
+    margin-bottom: 5vh;
+    margin-left: 12vw;
+    margin-right:auto;
+}
+.c1 {
+    grid-column: 1;
+}
+.c2 {
+    grid-column: 2;
+}
+.cost-container{
+    background-color: rgba(255, 255, 255, 0.747);
+    border-top: 1px black solid;
+    border-bottom: 1px black solid;
+    margin-top: 5px;
+}
+.cost-containerBlack{
+    background-color: var(--colorgris);
+    height: fit-content;
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
+.costText{
+    margin-bottom: -5px;
+}
+.costTextSmall{
+    font-size: 16px;
+}
+#buyBtn{
+    width: 50%;
+    background-color: var(--colorsecundario);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
