--- a/css/product-info.css
+++ b/css/product-info.css
@@ -7,10 +7,10 @@ main {
 .title {
 	font-size: 30px;
 }
-#product-container {
+/*#product-container {
 	/* width:100%;
-    font-size: 20px;*/
-}
+    font-size: 20px;
+}*/
 .info-container {
 	width: 85%;
 	margin-left: 17vw;
@@ -27,8 +27,359 @@ main {
 	padding: 1vh 1vw;
 	margin-top: 1vh;
 }
+#info-container {
+	position: relative;
+	background-color: var(--colorgris);
+	color: var(--whitetext);
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	line-height: 40px;
+	margin: 10px;
+	padding: 20px;
 
-#quantity-box {
-	margin-left: 15.5vw;
+	border-bottom-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+}
+.image-container {
+	position: relative;
+	display: flex;
+	background-color: var(--colorgris);
+	color: var(--whitetext);
+	text-align: center;
+	flex-direction: column;
+	margin-left: 10px;
+	margin-right: 10px;
+	height: 100%;
+	right: 0;
+	width: 100%;
+	grid-column: 1;
+	border-bottom-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+}
+#relatedproducts {
+	width: 97%;
+}
+#info-image-container {
+	border-top: 30px solid var(--colorprincipal);
+	border-radius: 20px;
+	position: relative;
+	height: fit-content;
+	display: grid;
+	grid-template-columns: repeat(2, 2fr);
+	gap: 20px 20px;
+	justify-content: center;
+	align-items: center;
+	margin: 20px;
+}
+.relatedproducts {
+	border-top: 30px solid var(--colorprincipal);
+	border-radius: 20px;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+}
+#relatedproduct {
+	padding-bottom: 15px;
+}
+
+#wholeProduct-container {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: var(--lightalphacolor);
+	height: fit-content;
+	width: 100%;
+	margin-top: 1%;
+	border-bottom-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	padding-bottom: 1%;
+}
+.carousel-inner {
+	border-radius: 20px;
+	transform: scale(70%);
+}
+#addToCartBtn {
+	margin-top: 20px;
+	border-radius: 20px;
+	position: relative;
+	background-color: var(--colorprincipal);
+	color: white;
+	left: 10%;
+	width: 80%;
+}
+.image-related-product {
+	width: 75%;
+	border-radius: 15px;
+	border: 0.5px solid var(--coloroscuro);
+}
+.related-product-container {
+	width: 35%;
+}
+@media (max-width: 767px) {
+	#info-image-container {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.image-container {
+		margin-left: 0;
+	}
+}
+
+/* Media Query para pantallas medianas */
+@media (min-width: 768px) {
+	#info-image-container {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+/*cometarios css*/
+
+#showedCommentsContainer {
+	position: relative;
+	background-color: var(--lightalphacolor);
+	width: fit-content;
+	padding: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	bottom: 0;
+	border-radius: 20px;
+	width: 95%;
+}
+.comment-container {
+	position: relative;
+}
+#generalCmntsContainer {
+	background-color: #ffffff8e;
+	margin-bottom: 10vh;
+	z-index: 1;
+	height: fit-content;
+	position: static;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#newCommentBtn {
+	position: fixed;
+	height: 40px;
+	top: -40px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom: #83838300;
+	background-color: #ffffff8e;
+}
+#commentsArea {
+	background-color: #ffffff8e;
+	border-top-right-radius: 20px;
+	border-top-left-radius: 20px;
+	height: 300px;
+	width: 50%;
+	min-width: 350px;
+	padding: 2vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	bottom: 0;
+	transform: translateY(300px);
+	transition: all 0.5s;
+}
+.deleteCmntBtn {
+	position: relative;
+	right: -20%;
+	height: 30px;
+	background: #a8a8a800;
+}
+#commentContainer {
+	padding: 20px;
+	position: relative;
+	min-width: 300px;
+	width: 75%;
+}
+.comment-box {
+	background-color: #d1d1d133;
+	width: 98%;
+	min-width: 300px;
+}
+#cmntUsrBanner {
+	position: relative;
+	height: 80px;
+	left: -75px;
+}
+#profileImage {
+	position: absolute;
+	background: #ffffff;
+	height: 45px;
+	left: -60px;
+}
+#cmntInfo {
+	position: relative;
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: nowrap;
+	height: 50px;
+	width: 85%;
+	margin: 5px;
+}
+#cmntInfo .cmntUser {
+	flex: 1;
+	text-align: left;
+	margin: 1vh;
+}
+
+#cmntInfo #dateTime {
+	text-align: right;
+	transform: translate(-200px);
+	margin: 1vh;
+}
+.cmntUser {
+	position: absolute;
+	color: #f8f9fa;
+	left: 10px;
+	font-size: 24px;
+}
+#dateTime {
+	display: flex;
+	justify-content: space-between;
+	width: 100px;
+	position: sticky;
+	color: #f8f9fa;
+	text-align: right;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+#cmntBtnsContainer {
+	width: 420px;
+	position: relative;
+	margin: 5px;
+	height: fit-content;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.cmntBtn {
+	position: relative;
+	color: #f8f9fa;
+	top: -7px;
+	border-top: #ffffff00;
+	background-color: var(--colorgris);
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+.cmntBtn:hover {
+	position: relative;
+	color: #f8f9fa;
+	top: -7px;
+	transform: scale(105%);
+	border-top: #ffffff00;
+	background-color: #3a3a3a;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+#cmntText {
+	position: relative;
+	margin: 5px;
+	margin-top: 0;
+	background-color: #e0e0e0;
+	height: 100px;
+	resize: none;
+	overflow-y: none;
+	width: 100%;
+	max-width: 500px;
+	white-space: pre-wrap;
+	font-size: 12px;
+	padding: 10px;
+	border-radius: 20px;
+}
+.rating {
+	position: relative;
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	top: -5px;
+	left: 20px;
+}
+.rating input {
+	display: none;
+}
+.rating label {
+	display: block;
+	cursor: pointer;
+	width: 25px;
+}
+.rating label:before {
+	content: "\f005";
+	position: relative;
+	font-family: fontAwesome;
+	font-size: 20px;
+	display: block;
+	color: #101010;
+}
+.rating label:after {
+	content: "\f005";
+	position: absolute;
+	font-family: fontAwesome;
+	font-size: 20px;
+	display: block;
+	color: #ffd61f;
+	top: 0;
+	opacity: 0;
+	transition: 0.5s;
+	text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+.rating label:hover:after,
+.rating input:checked ~ label:after {
+	opacity: 1;
+}
+#cmntBtnsGroup{
+	position: relative;
+	height: fit-content;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+@media (min-width: 375px) {
+	.comment-box {
+		font-size: 12px;
+	}
+}
+
+@media (min-width: 768px) {
+	.comment-box {
+		font-size: 15px;
+	}
+}
+@media (min-width: 992px) {
+	.comment-box {
+		font-size: 18px;
+		
+	}
 	
+}
+@media (max-width: 680px) {
+	#cmntBtnsContainer {
+		width: 420px;
+		flex-direction: column;
+		position: relative;
+		margin: 5px;
+		height: fit-content;
+		display: flex;
+		align-items:flex-start;
+		justify-content: start;
+	}
+	#cmntBtnsGroup{
+		font-size: 15px;
+	}
+	#cmntUser{
+		font-size: 18px;
+	}
+	#commentsArea {
+		width: 100%;
+		
+	}
 }
